src/Pages/Events/Events.module.scss
@import url("https://fonts.googleapis.com/css2?family=Philosopher&display=swap");

* {
  margin: 0;
}

.main {
  background-image: url("src/Assets/texture.png");
  height: 100%;
  width: 100%;
  overflow: hidden;

  .content {
    padding: 0 15%;
    font-size: 3vmin;
    text-align: center;
    line-height: 30px;
    font-family: "Philosopher", sans-serif;
  }
}

.phoolTema {
  position: absolute;
  z-index: -1;

  top: 25rem;
  overflow: hidden;
  width: 100%;

  img {
    width: 50%;
    position: relative;
    transform: scale(1.5);
  }

  #phoolLeft {
    animation: phoolLeftAnime ease-in-out 6s 0s infinite;
    animation-direction: alternate-reverse;
  }

  #phoolRight {
    animation: phoolRightAnime ease-in-out 6s 0s infinite;
    animation-direction: alternate-reverse;
  }
}

@keyframes phoolLeftAnime {
  to {
    transform: scale(1.2) translateX(180px);
  }
}

@keyframes phoolRightAnime {
  to {
    transform: scale(1.2) translateX(-180px);
  }
}

@media only screen and (max-width: 600px) {
  .main {
    padding-top: 50px;
    .content {
      padding: 3% 15%;
      font-size: 3vmin;
      line-height: 20px;
    }
  }

  #phoolLeft {
    left: 7%;
  }

  #phoolRight {
    right: 7%;
  }
}

